--- a/7.18.ipynb
+++ b/7.18.ipynb
@@ -21,6 +21,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[95, 102, 24, 90, 161, 149, 61, 133, 162, 119, 97, 153, 111, 97, 109, 18, 92, 117, 68, 16, 86, 55, 145, 167, 113, 89, 140, 168, 62, 147, 148, 56, 97, 87, 91, 187, 117, 0, 168, 21, 112, 21, 136, 117, 55, 95, 70, 95, 61, 114, 56, 46, 65, 106, 31, 132, 98, 55, 163, 111, 87, 48, 86, 85, 187, 118, 44, 110, 29, 83, 182, 143, 62, 94, 176, 111, 88, 34, 118, 67, 69, 134, 89, 75, 105, 28, 130, 177, 184, 127, 117, 224, 59, 77, 136, 98, 68, 105, 107, 82]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 房间里有100个人，每人都有100元钱，他们在玩一个游戏。\n",
+    "# 每轮游戏中，每个人都要拿出一元钱随机给另一个人，最后这100个人的财富分布是怎样的？\n",
+    "import random\n",
+    "money=[100]*100\n",
+    "i=0\n",
+    "while 0 not in money:\n",
+    "    ran=random.randint(0,99)\n",
+    "    money[i]-=1\n",
+    "    money[ran]+=1\n",
+    "    i+=1\n",
+    "    i=i%100\n",
+    "print(money)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# coding:utf-8\n",
+    "# 房间里有100个人，每人都有100元钱，他们在玩一个游戏。\n",
+    "# 每轮游戏中，每个人都要拿出一元钱随机给另一个人，最后这100个人的财富分布是怎样的？\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import random\n",
+    "person = 100\n",
+    "id_list = range(person)\n",
+    "id_money_dict = {k: person for k in id_list}\n",
+    "round_number = 17000\n",
+    "for round in range(round_number):\n",
+    "    for id in id_money_dict.keys():\n",
+    "        id_money_dict[id] += -1\n",
+    "        id_get = random.randint(0, person-1)\n",
+    "        while id_get == id:\n",
+    "            id_get = random.randint(0, person - 1)\n",
+    "        id_money_dict[id_get] += 1\n",
+    "se = pd.Series(id_money_dict)\n",
+    "se.plot.bar()\n",
+    "plt.show()\n",
+    "plt.close()\n",
+    "plt.show()\n",
+    "plt.close()\n",
+    "se.plot.hist(bins=100)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "1475046880 1475046880\n"
      ]
     }
@@ -712,6 +773,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x1\n",
+      "y2\n",
+      "z3\n",
+      "1 2 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = int(input(\"x\"))\n",
+    "y = int(input(\"y\"))\n",
+    "z = int(input(\"z\"))\n",
+    "if x>y:\n",
+    "    x,y = y,x\n",
+    "if x>z:\n",
+    "    x,z = z,x\n",
+    "if y>z:\n",
+    "    y,z = z,y\n",
+    "print(x,y,z)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1115,13 +1205,6 @@
     "else:\n",
     "    print('输入的边长不符合')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
