--- a/7.20.ipynb
+++ b/7.20.ipynb
@@ -368,6 +368,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -391,6 +398,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bobo\n"
+     ]
+    }
+   ],
+   "source": [
+    "def haha(name):\n",
+    "    print(name)\n",
+    "haha(name = 'bobo')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bobo\n"
+     ]
+    }
+   ],
+   "source": [
+    "def haha(*,name):#*,代表强制命名\n",
+    "    print(name)\n",
+    "haha(name = 'bobo')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bobo\n"
+     ]
+    }
+   ],
+   "source": [
+    "def haha(*,name,name2,name4='fff'):#*,代表强制命名\n",
+    "    print(name)\n",
+    "haha(name = 'bobo',name2='ddd')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -404,6 +468,267 @@
     "  - 返回的数据类型是字典\n",
     "  - 输入的一定要是表达式(键值对)\n",
     "- 一般大的项目传入参数时，使用config文件一次写入所有的参数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def TT(*args):\n",
+    "    print(args)\n",
+    "TT (1,2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "()\n"
+     ]
+    }
+   ],
+   "source": [
+    "TT()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "TT(1,2,3,4,5,6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=(1,2,4,5)\n",
+    "for i in a:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def max_(*args):\n",
+    "    res = 0\n",
+    "    for i in args:\n",
+    "        if i > res:\n",
+    "            res = i\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_(-1,0,1,2,3,4,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def he(*sum):\n",
+    "    a=0\n",
+    "    for i in sum:\n",
+    "        if i<a:\n",
+    "            a=a+i\n",
+    "        else:\n",
+    "            a=a+i\n",
+    "    return a   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "he(1,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum_(*args,A='sum'):\n",
+    "    print(A)\n",
+    "    res = 0\n",
+    "    count = 0\n",
+    "    for i in args:\n",
+    "        res +=i\n",
+    "        count +=1\n",
+    "    mean  = res / count\n",
+    "    return res,mean "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sum\n",
+      "2 0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a,b=sum_(-1,0,1,2)\n",
+    "print(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum_(*args,A='sum'):\n",
+    "    res = 0\n",
+    "    count = 0\n",
+    "    for i in args:\n",
+    "        res += i\n",
+    "        count += 1\n",
+    "    if A == \"sum\":\n",
+    "        return res\n",
+    "    elif A == \"mean\":\n",
+    "        mean = res / count\n",
+    "        return res,mean \n",
+    "    else:\n",
+    "        print(A,'还未开放')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "var 还未开放\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum_(-1,0,1,2,A='var')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tongji(n):\n",
+    "    shuzi=0\n",
+    "    xiaoxie=0\n",
+    "    daxie=0\n",
+    "    for i in n:\n",
+    "        num = ord(i)\n",
+    "        if 48<=num<=57:\n",
+    "            shuzi +=1\n",
+    "        elif 65<=num<=90:\n",
+    "            daxie+=1\n",
+    "        elif 97<=num<=122:\n",
+    "            xiaoxie+=1\n",
+    "    return shuzi,xiaoxie,daxie\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 3, 2)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tongji('wASt4g')"
    ]
   },
   {
@@ -457,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +803,7 @@
     }
    ],
    "source": [
-    "def wujiao():\n",
+    "def wujiaoshu():\n",
     "    a=0\n",
     "    for i in range (1,101):\n",
     "        num=int(i*(3*i-1)/2)\n",
@@ -486,7 +811,7 @@
     "        a+=1\n",
     "        if a%10==0:\n",
     "            print()\n",
-    "wujiao()"
+    "wujiaoshu()"
    ]
   },
   {
