--- a/7.20.ipynb
+++ b/7.20.ipynb
@@ -472,6 +472,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 100, 'b': 1000}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def TT(**kwargs):\n",
+    "    print(kwargs)\n",
+    "    \n",
+    "TT(a=100,b=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 100, 'b': 1000}\n",
+      "(1, 2, 3, 4, 5, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def TT(*args,**kwargs):\n",
+    "    print(kwargs)\n",
+    "    print(args)\n",
+    "TT(1,2,3,4,5,6,a=100,b=1000)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'key': 'value'}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{'key':'value'}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -732,6 +793,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def U(str_):\n",
+    "    for i in str_:\n",
+    "        ASCII = ord(i)\n",
+    "        if 97<=ASCII<=122:\n",
+    "            xiaoxie+=1\n",
+    "        elif  65<=num<=90:\n",
+    "            daxie+=1\n",
+    "        elif 48<=num<=57:\n",
+    "            shuzi +=1\n",
+    "    return shuzi,xiaoxie,daxie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'xiaoxie' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-13-ca775bef600a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mU\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'wASt4g'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-12-bd75f871ca65>\u001b[0m in \u001b[0;36mU\u001b[1;34m(str_)\u001b[0m\n\u001b[0;32m      3\u001b[0m         \u001b[0mASCII\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mord\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;36m97\u001b[0m\u001b[1;33m<=\u001b[0m\u001b[0mASCII\u001b[0m\u001b[1;33m<=\u001b[0m\u001b[1;36m122\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m             \u001b[0mxiaoxie\u001b[0m\u001b[1;33m+=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m         \u001b[1;32melif\u001b[0m  \u001b[1;36m65\u001b[0m\u001b[1;33m<=\u001b[0m\u001b[0mnum\u001b[0m\u001b[1;33m<=\u001b[0m\u001b[1;36m90\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m             \u001b[0mdaxie\u001b[0m\u001b[1;33m+=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'xiaoxie' referenced before assignment"
+     ]
+    }
+   ],
+   "source": [
+    "U('wASt4g')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -749,6 +850,60 @@
     "- 全局变量 global\n",
     "- globals 函数返回一个全局变量的字典，包括所有导入的变量\n",
     "- locals() 函数会以字典类型返回当前位置的全部局部变量。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "globals()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1100\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=1000\n",
+    "b=10\n",
+    "def Y():\n",
+    "    global a,b\n",
+    "    a +=100\n",
+    "    print(a)\n",
+    "Y()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1200\n",
+      "1100\n"
+     ]
+    }
+   ],
+   "source": [
+    "def YY(a1):\n",
+    "    a1 += 100\n",
+    "    print(a1)\n",
+    "YY(a)\n",
+    "print(a)\n"
    ]
   },
   {
@@ -898,6 +1053,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bad(c):\n",
+    "    a = 0\n",
+    "    d = 0\n",
+    "    while a < 3:\n",
+    "        b = c * (10 ** a) +d\n",
+    "        d = b\n",
+    "        a +=1\n",
+    "        print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "66\n",
+      "666\n"
+     ]
+    }
+   ],
+   "source": [
+    "bad(6)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1011,12 +1201,74 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def shu():\n",
+    "    for i in range(5,31):\n",
+    "        if i == 2:\n",
+    "            s = 2 ** i - 1\n",
+    "            return s\n",
+    "        elif i % 2 == 0 or i % 3 == 0:\n",
+    "            pass\n",
+    "        else:\n",
+    "            b = 2 ** i - 1\n",
+    "            return b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "31"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shu()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "- 9\n",
     "![](../Photo/82.png)\n",
     "![](../Photo/83.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2019 22:04:12'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "now = datetime.datetime.now()\n",
+    "\n",
+    "now.strftime('%Y %H:%M:%S') "
    ]
   },
   {
@@ -1035,6 +1287,23 @@
     "### 去网上寻找如何用Python代码发送邮件 \n",
     "    - time.sleep(3)  3秒发送一次\n",
     "    - 一旦错误后，重新换一个邮箱"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import smtplib\n",
+    "s = smtplib.SMTP(\"localhost\")\n",
+    "tolist = [\"xxx@qq.com\", \"xxx@163.com\"]\n",
+    "msg = '''\\\n",
+    "From: Me@my.org\n",
+    "Subject: test\n",
+    "This is a test '''\n",
+    "s.sendmail(\"me@my.org\", tolist, msg)\n",
+    "{}"
    ]
   }
  ],
