--- a/7.24.ipynb
+++ b/7.24.ipynb
@@ -1515,6 +1515,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character in identifier (<ipython-input-1-e90f0aa9aaff>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-e90f0aa9aaff>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    def countchar(str):\u001b[0m\n\u001b[1;37m                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid character in identifier\n"
+     ]
+    }
+   ],
+   "source": [
+    "def countchar(str):\n",
+    "\n",
+    "    s=str.lower()\n",
+    "\n",
+    "    result=[]\n",
+    "\n",
+    "    for index,value in enumerate([chr(i) for i in range(97,123)]):\n",
+    "\n",
+    "        result.append(s.count(value))\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "str=raw_input()\n",
+    "\n",
+    "print countchar(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
