--- a/7.23.ipynb
+++ b/7.23.ipynb
@@ -1281,11 +1281,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Joker4:\n",
+    "class lei:\n",
     "    def __init__(self,a,b,c,d,e,f):\n",
     "        self.a = a\n",
     "        self.b = b\n",
@@ -1304,16 +1304,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kk=Joker4(1,2,4,5,8,9)"
+    "kk=lei(1,2,4,5,8,9)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
